# advent-of-code

./: LICENSE  README.md
2019/jim/: advent_of_code_python_2019.ipynb  day14.dot  day15_maze.dot  day6.dot  day6_example.dot  day6_example_b.dot
2019/jim/arcade/: advent_of_code_python_2019.py  arcade.py  curses_demo.py  intcodemachine.py
2019/quang/day01/: Cargo.toml
2019/quang/day04/: Cargo.toml
2019/quang/day05/: Cargo.toml
2019/quang/day06/: Cargo.toml
2019/quang/day07/: Cargo.toml
2019/quang/day08/: Cargo.toml
2019/quang/day10/: Cargo.toml
2019/stacy/: CMakeLists.txt
2019/stacy/day-1/: day1_puzzle1.cpp
2019/stacy/day1/: day1.cpp
2019/stacy/day2/: day2-1.cpp  day2-2.cpp  helper.cpp  helper.h
2019/stacy/day3/: day3-1.cpp  day3-2.cpp  helper.cpp  helper.h
2019/stacy/day4/: day4.cpp
2019/stacy/day5/: day5.cpp  helper.cpp  helper.h
2021/five/: README.md  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/jim/: .#09.janet  .#matrix.janet  .gitignore  01.janet  02.janet  03.janet  04.janet  05.janet  06.janet  07.janet  08.janet  09.janet  1.janet  10.janet  11.janet  12.janet  13.janet  14.janet  15.janet  16.janet  17.janet  18.janet  19.janet  2.janet  20.janet  21.janet  22.janet  23.janet  24.janet  25.janet  3.janet  4.janet  5.janet  6.janet  7.janet  8.janet  9.janet  day1.janet  grid  heap.janet  (+4 more)
2021/swagata/: README.md  day-1.py  day-10.py  day-11.py  day-13.py  day-14.py  day-2.py  day-3.py  day-4.py  day-5.py  day-6.py  day-7.py  day-8.py  day-9.py  toolkit_test.py
(+44 files in other folders)
